cmake_minimum_required(VERSION 2.8)
project(common_multichannelpowersupply_CAEN2527)
find_package(chaos)
ADD_SUBDIRECTORY(HV)
ADD_DEFINITIONS(-DDEBUG -fpermissive)
FILE(GLOB src *.cpp)
ADD_LIBRARY(${PROJECT_NAME} STATIC ${src} )
LINK_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/HV)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} common_debug chaos_common CaenOwnerLib )
FILE(GLOB model_src *.h)
INSTALL(FILES ${model_src} DESTINATION include/common/MultiChannelPowerSupply/models/CAEN2527)
INSTALL_TARGETS(/lib ${PROJECT_NAME})
